# WordleBuddy

./: .gitignore  README.md  hyperparameters.py  pyproject.toml  requirements.txt  utils.py
archive/: guessing.py  gui.py  main.py
archive/word_banks/: Austrian_Word_Bank.txt  German_Word_Bank.txt  word_bank_config.json
word_banks/: Spanish_Word_Bank.txt
wordle_buddy/: __init__.py  config.py  guesser.py  terminal_version.py
wordle_buddy/utils/: word_bank_manager.py  word_scorer_entropy.py
wordle_buddy/word_banks/: austrian_word_bank.npy  english_word_bank.npy  german_word_bank.npy  spanish_word_bank.npy
wordle_solver/: __init__.py  guesser.py  terminal_version.py
wordle_solver/utils/: hyperparameters.py  word_bank_manager.py  word_scorer_entropy.py
