[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wordle_solver"
version = "0.1.0"
description = "A Python package for solving Wordle puzzles"
readme = "README.md"
authors = [{ name = "Greggory Zinniel", email = "gzinniel@gmail.com" }]
license = { file = "LICENSE" }
dependencies = ["numpy"]  # Add more dependencies as needed

[tool.setuptools]
packages = ["wordle_solver"]
