[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wordle_solver"
version = "0.1.5"
description = "A Python package for solving Wordle puzzles"
readme = "README.md"
authors = [{ name = "Greggory Zinniel", email = "gzinniel.github@gmail.com" }]
license = { file = "LICENSE" }
dependencies = ["numpy"]  # Add more dependencies as needed

[tool.setuptools.packages.find]
where = ["."]
include = ["wordle_solver", "wordle_solver.utils", "wordle_solver.word_banks"]

[tool.setuptools.package-data]
"wordle_solver.word_banks" = ["*.npy"]