[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wordle_buddy"
version = "0.1.15"
description = "A Python package for solving Wordle puzzles"
readme = "README.md"
authors = [{ name = "Greggory Zinniel", email = "gzinniel.github@gmail.com" }]
license = { file = "LICENSE" }
dependencies = ["numpy"]  # Add more dependencies as needed

[tool.setuptools.packages.find]
where = ["."]
include = ["wordle_buddy", "wordle_buddy.utils", "wordle_buddy.word_banks"]

[tool.setuptools.package-data]
"wordle_buddy.word_banks" = ["*.npy"]